--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,12 @@ buildscript {
         google()
         mavenCentral()
     }
+
+    ext.hilt_version = '2.35'
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
